# django

./: .gitignore  Makefile  README.md  pyproject.toml
src/: db.sqlite3
src/mysite/: settings.py  urls.py
src/polls/: admin.py  views.py
src/polls/migrations/: 0001_initial.py
src/polls/static/polls/: style.css
src/polls/templates/polls/: detail.html
